# data-diff

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  example.sh  progress_bar_demo.py  pyproject.toml  readthedocs.yml  requirements.txt  ruff.toml  setup_testenv.md
.github/ISSUE_TEMPLATE/: bug_report.md  request-support-for-a-database.md
.github/workflows/: add-triage-to-stale-issues-with-comments.yml  ci.yml  ci_full.yml  formatter.yml  label-update_awaiting-response-to-triage.yml  label-update_stale-to-triage.yml  on_push.yml  serverless_redshift.yaml  stale.yml
data-diff/: database.py  diff_tables.py  sql.py
data_diff/: __init__.py  __main__.py  bound_exprs.py  cli_options.py  config.py  database.py  dbt.py  dbt_config_validators.py  dbt_parser.py  diff_tables.py  errors.py  format.py  hashdiff_tables.py  hot_reload.py  info_tree.py  joindiff_tables.py  lexicographic_space.py  parse_time.py  query_utils.py  schema.py  sql.py  table_segment.py  thread_utils.py  tracking.py  tui.py  utils.py  version.py
data_diff/abcs/: compiler.py  database_types.py  mixins.py
data_diff/cloud/: __init__.py  data_source.py  datafold_api.py
data_diff/databases/: __init__.py  _connect.py  base.py  bigquery.py  clickhouse.py  clickzetta.py  connect.py  database_types.py  databricks.py  duckdb.py  exasol.py  mssql.py  mysql.py  oracle.py  postgresql.py  presto.py  redshift.py  snowflake.py  trino.py  vertica.py
data_diff/queries/: __init__.py  api.py  ast_classes.py  base.py  compiler.py  extras.py
data_diff/sqeleton/: __init__.py  __main__.py  bound_exprs.py  repl.py  schema.py  utils.py
data_diff/sqeleton/abcs/: __init__.py  compiler.py  database_types.py  mixins.py
data_diff/sqeleton/databases/: __init__.py  _connect.py  base.py  bigquery.py  clickhouse.py  connect.py  database_types.py  databricks.py  duckdb.py  mssql.py  mysql.py  oracle.py  postgresql.py  presto.py  redshift.py  snowflake.py  trino.py  vertica.py
data_diff/sqeleton/queries/: __init__.py  api.py  ast_classes.py  base.py  compiler.py  extras.py
dbdiff/: __main__.py  database.py  diff_tables.py  sql.py
dev/: Dockerfile  Dockerfile.prestosql.340  _bq_import_csv.py  benchmark.sh  dev.env  docker-compose.yml  example.sh  graph.py  prepare_db.pql  prepare_db_bigquery.pql  prepare_db_gaps.pql  prepare_db_mssql.pql  prepdb.Dockerfile  prepdb.sh  pyproject.toml  setup_testenv.md  xdiff.Dockerfile
dev/exasol/: _exasol_import_csv.py  reset_ip.sh
dev/presto-conf/standalone/: config.properties  password-authenticator.properties  password.db
dev/presto-conf/standalone/catalog/: postgresql.properties
dev/trino-conf/etc/: config.properties
docs/: Makefile  common_use_cases.md  conf.py  conn_editor.md  how-to-use.md  index.rst  install.md  intro.md  make.bat  new-database-driver-guide.rst  python-api.rst  python_examples.rst  requirements.txt  supported-databases.md  technical-explanation.md  usage_analytics.md
docs/sqeleton/: index.rst  install.md  python-api.rst
sqeleton/: __init__.py  __main__.py  conn_editor.py  query_utils.py  repl.py  utils.py
sqeleton/abcs/: compiler.py  database_types.py  mixins.py
sqeleton/databases/: __init__.py  _connect.py  base.py  bigquery.py  clickhouse.py  databricks.py  duckdb.py  mssql.py  mysql.py  oracle.py  postgresql.py  presto.py  redshift.py  snowflake.py  trino.py  vertica.py
sqeleton/queries/: __init__.py  api.py  ast_classes.py  base.py  compiler.py  extras.py
src/: pyproject.toml
src/xdiff/: database.py  diff_tables.py
tests/: common.py  setup.pql  test_api.py  test_canonize.py  test_cli.py  test_clickzetta.py  test_config.py  test_database.py  test_database_types.py  test_dbt.py  test_dbt_config_validators.py  test_dbt_parser.py  test_diff_tables.py  test_duckdb.py  test_format.py  test_joindiff.py  test_main.py  test_mesh.py  test_mixins.py  test_normalize_fields.py  test_parse_time.py  test_postgresql.py  test_query.py  test_sql.py  test_utils.py  waiting_for_stack_up.sh
tests/cloud/: test_data_source.py
tests/cloud/files/: data_source_list_response.json  data_source_schema_config_response.json
tests/dbt_artifacts/: dbt_project.yml  jaffle_shop.duckdb  profiles.yml
tests/dbt_artifacts/manifests/: manifest_v10.json  manifest_v11.json  manifest_v11_no_tracking.json  manifest_v4.json  manifest_v5.json  manifest_v6.json  manifest_v7.json  manifest_v8.json  manifest_v9.json
tests/dbt_artifacts/motherduck/: profiles.yml
tests/dbt_artifacts/run_results/: run_results_v4.json  run_results_v5.json
tests/sqeleton/: common.py  test_database.py  test_mixins.py  test_query.py  test_sql.py  test_utils.py
xdiff/: __init__.py  __main__.py  database.py  diff_tables.py  sql.py
