[tool.poetry]
name = "data-diff"
version = "0.2.3"
description = "Command-line tool and Python library to efficiently diff rows across two different databases."
authors = ["Datafold <data-diff@datafold.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/datafold/data-diff"
documentation = ""
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Topic :: Database :: Database Engines/Servers",
    "Typing :: Typed"
]
packages = [{ include = "data_diff" }]

[tool.poetry.dependencies]
python = "^3.7.1"
runtype = "^0.2.6"
dsnparse = "*"
click = "^8.1"
rich = "^10.16.2"
toml = "^0.10.2"


preql = { version = "^0.2.15", optional = true }
psycopg2 = { version = "*", optional = true }
mysql-connector-python = { version = "*", optional = true}
snowflake-connector-python = { version = "*", optional = true }

[tool.poetry.dev-dependencies]
mysql-connector-python = "*"
preql = "^0.2.15"
snowflake-connector-python = "*"
psycopg2 = "*"
presto-python-client = "*"
parameterized = "*"
unittest-parallel = "*"

[tool.poetry.extras]
# When adding, update also: README + dev deps just above
preql = ["preql"]
mysql = ["mysql-connector-python"]
postgresql = ["psycopg2"]
snowflake = ["snowflake-connector-python"]
presto = ["presto-python-client"]
oracle = ["cx_Oracle"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
data-diff = 'data_diff.__main__:main'
