[tool.poetry]
name = "data-diff"
version = "0.9.3"
description = "Command-line tool and Python library to efficiently diff rows across two different databases."
authors = ["Datafold <data-diff@datafold.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/datafold/data-diff"
documentation = ""
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Topic :: Database :: Database Engines/Servers",
    "Typing :: Typed"
]
packages = [{ include = "data_diff" }]
[tool.poetry.dependencies]
pydantic = "1.10.12"
python = "^3.8.0"
dsnparse = "<0.2.0"
click = "^8.1"
rich = "*"
toml = "^0.10.2"
mysql-connector-python = {version="8.0.29", optional=true}
psycopg2 = {version="*", optional=true}
snowflake-connector-python = {version = ">=3.0.2,<4.0.0", optional=true}
cryptography = {version="*", optional=true}
trino = {version="^0.314.0", optional=true}
presto-python-client = {version="*", optional=true}
clickhouse-driver = {version="*", optional=true}
duckdb = {version="*", optional=true}
dbt-core = {version="^1.0.0"}
keyring = "*"
tabulate = "^0.9.0"
preql = {version="^0.2.19", optional=true}
vertica-python = {version="*", optional=true}
urllib3 = "<2"
oracledb = {version = "*", optional=true}
pyodbc = {version="^4.0.39", optional=true}
typing-extensions = ">=4.0.1"
attrs = "^23.1.0"
mashumaro = {version = ">=3.8.1,<3.9.0", extras = ["msgpack"]}

[tool.poetry.dev-dependencies]
parameterized = "*"
unittest-parallel = "*"
preql = "^0.2.19"
mysql-connector-python = "*"
psycopg2 = "*"
snowflake-connector-python = ">=3.0.2,<4.0.0"
cryptography = "*"
trino = "^0.314.0"
presto-python-client = "*"
clickhouse-driver = "*"
vertica-python = "*"
duckdb = "^0.7.0"
dbt-core = "^1.0.0"
# google-cloud-bigquery = "*"
# databricks-sql-connector = "*"

[tool.poetry.extras]
# When adding, update also: README + dev deps just above
preql = ["preql"]
mysql = ["mysql-connector-python"]
postgresql = ["psycopg2"]
redshift = ["psycopg2"]
snowflake = ["snowflake-connector-python", "cryptography"]
presto = ["presto-python-client"]
oracle = ["oracledb"]
mssql = ["pyodbc"]
# databricks = ["databricks-sql-connector"]
trino = ["trino"]
clickhouse = ["clickhouse-driver"]
vertica = ["vertica-python"]
duckdb = ["duckdb"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
data-diff = 'data_diff.__main__:main'

[tool.black]
line-length = 120
