[tool.poetry]
name = "xdiff-infra"
version = "0.1.0"
description = ""
authors = ["chiel <chiel@datafold.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
protobuf = "^3.20.1"
psycopg2 = "^2.9.3"
preql = "^0.2.11"
mysql-connector-python = "^8.0"
datafold-xdiff = { path = "../src", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
